# ChangeLog for dev-python/lettuce
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 May 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.21.ebuild,
  lettuce-0.1.25.ebuild:
  Keyworded x86.

  05 May 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.25.ebuild:
  Keyworded amd64.

*lettuce-0.1.26 (17 Apr 2011)

  17 Apr 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.26.ebuild:
  Version bump [342].

*lettuce-0.1.25 (05 Apr 2011)

  05 Apr 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.25.ebuild:
  Version bump [319].

  01 Apr 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.20.ebuild,
  lettuce-0.1.21.ebuild:
  Keyworded x86.

  31 Mar 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.21.ebuild:
  Keyworded amd64.

  23 Mar 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.19.ebuild,
  lettuce-0.1.20.ebuild:
  Keyworded x86.

  22 Mar 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.20.ebuild:
  Keyworded amd64.

*lettuce-0.1.21 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.21.ebuild:
  Version bump [298].

  21 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.18.ebuild,
  lettuce-0.1.19.ebuild:
  Keyworded x86.

  21 Feb 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.19.ebuild:
  Keyworded amd64.

  09 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.17.ebuild,
  lettuce-0.1.18.ebuild:
  Keyworded x86.

  09 Feb 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.18.ebuild:
  Keyworded amd64.

*lettuce-0.1.19 (22 Jan 2011)

  22 Jan 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.19.ebuild:
  Version bump [265].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

*lettuce-0.1.18 (10 Jan 2011)

  10 Jan 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.18.ebuild:
  Version bump [247].

  09 Jan 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.15.ebuild,
  lettuce-0.1.17.ebuild:
  Keyworded x86.
