@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST lettuce-0.1.25.tar.gz 70019 RMD160 768d43ebb2c8de9ed08300564093f4b8d9467ca0 SHA1 ac66c3205c0bffa72be0e06e2ca153578c38a7c8 SHA256 7e080d80e8cc5ad80429602bb63ea5e618a216ce4aa13cf2626dfbb2183b8ec9
 DIST lettuce-0.1.26.tar.gz 71059 RMD160 e5a8a8d739e7bfe9884d1b826efbbcb47c643cd3 SHA1 519760a0f5ec5fa17b4eaa4184652b767149d598 SHA256 e7b0caf099f0f373e64feb7fa3b1079634054db1ab7aa9088a8d692b0164cc68
+DIST lettuce-0.1.27.tar.gz 70923 RMD160 65a9c62041fb8c15b060e2510c5e6c6115e345c9 SHA1 233773621cb35d3831d8873ea4bb5e157fefede1 SHA256 418275557dde788df6f8c59f2b1670bc17786a75169a96e7b4f2a970252731e5
 EBUILD lettuce-0.1.25.ebuild 525 RMD160 37e055fb255790622d4237a1bc750d3905fcb0fa SHA1 08a96cc5b5f8a700de88024eca713f6adaaee753 SHA256 7e555bf3339871fad8bc02daaf7189c86247dca3dc5e99476f0322998637f3db
 EBUILD lettuce-0.1.26.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
-MISC ChangeLog 6135 RMD160 ac947d100781db14df0a460118d25b24e6347d4a SHA1 ce870dee45d133576f522f3a7fe2019404255a62 SHA256 4c9bbf02de81a80f1263b7231dbdcc48db0964be4a3afa5dfe0d6a58b8e27f89
+EBUILD lettuce-0.1.27.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
+MISC ChangeLog 6258 RMD160 fed0f8c1c1e839e32013f0d09a81d3ad3a8fd4da SHA1 079b0fadb1522cf717830bc57b5a5e919be9a804 SHA256 c5245385a37be28420ef7f6ba323aeb49ce21516b9c5bac30edd71e7175c9d40
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 MISC watch 71 RMD160 edd7da79f12dfdb2aefdeef0ad84169198ac81e1 SHA1 179d11f0283700ba50fec038510e6799bf4cda97 SHA256 38b70a11ff644c207b17b11d885bbafb7166e1b9bcc238b58a630f54c8cd0b4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3CNlYACgkQzJrj3cAXR0krBwCZATx0RJsp++MOksRLE+zMpE7H
-ih4AoKo/CpRA2F5RTq8Ra3InXxOwyzA2
-=3Vzm
+iEYEARECAAYFAk3IGGgACgkQzJrj3cAXR0ltCgCcChteVbN7mifGRjMVt0ra3yCL
+Kx4Anju8iUDvGY27Yh20jajfquNizuHD
+=HWKd
 -----END PGP SIGNATURE-----
